NBIA-2161 Framing in dicom data overflow issue

--- a/software/nbia-search/src/app/image-search/data-section/data-section-tabs/search-results/search-results-table/subject-study-details/series-details/dicom-data/dicom-data.component.scss
+++ b/software/nbia-search/src/app/image-search/data-section/data-section-tabs/search-results/search-results-table/subject-study-details/series-details/dicom-data/dicom-data.component.scss
@@ -10,9 +10,9 @@
 }
 
 .dicom-data-column {
-    // white-space: nowrap;
-    // overflow: hidden;
-    // text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
     max-width: 100px; /* Restrict initial width */
     border: solid 1px #bbb;
     width: calc(75% - 140px);
@@ -24,7 +24,7 @@
 .dicom-data-column:hover{
     overflow-x: auto; /* Allow horizontal scroll when hovering */
    // white-space: normal; /* Allow text to wrap when hovering */
-   // max-width: 200px; /* Remove width restriction */
+    text-overflow: clip;
 }
 
 .dicom-element-column{
